force-app/main/default/objects/Book__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Book category</description>
    <inlineHelpText>Book category</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fiction</fullName>
            </value>
            <value>
                <fullName>Literary Fiction</fullName>
            </value>
            <value>
                <fullName>Science Fiction</fullName>
            </value>
            <value>
                <fullName>Fantasy</fullName>
            </value>
            <value>
                <fullName>Mystery/Thriller</fullName>
            </value>
            <value>
                <fullName>Romance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>