force-app/main/default/objects/Book__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Id for reference the book in an external database</description>
    <externalId>true</externalId>
    <inlineHelpText>Id for reference the book in an external database</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>