force-app/main/default/objects/Book__c/fields/Pages__c.field-meta.xml
<CustomField>
    <fullName>Pages__c</fullName>
    <description>Number of pages</description>
    <inlineHelpText>Number of pages</inlineHelpText>
    <label>Pages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>