force-app/main/default/objects/Book__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Book data origin</description>
    <inlineHelpText>Book data origin</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Registration</fullName>
            </value>
            <value>
                <fullName>Google Books API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>