force-app/main/default/objects/Book__c/fields/Synopsis__c.field-meta.xml
<CustomField>
    <fullName>Synopsis__c</fullName>
    <description>A brief description or summary of the book&apos;s content or storyline</description>
    <inlineHelpText>A brief description or summary of the book&apos;s content or storyline</inlineHelpText>
    <label>Synopsis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>