force-app/main/default/objects/Book__c/fields/Total_books_available__c.field-meta.xml
<CustomField>
    <fullName>Total_books_available__c</fullName>
    <description>Number of available books for borrowing</description>
    <inlineHelpText>Number of available books for borrowing</inlineHelpText>
    <label>Total books available</label>
    <summaryFilterItems>
        <field>Book_Copy__c.Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </summaryFilterItems>
    <summaryForeignKey>Book_Copy__c.Book__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>