force-app/main/default/objects/Book__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pages__c</columns>
    <columns>Synopsis__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>